# object_estimation

./: CMakeLists.txt  README.md
.cache/clangd/index/: aimm_cs_ducmkf.cpp.85BA9032B9F84993.idx  aimm_cs_ducmkf.h.2F8E58C2F8E90B38.idx  bandpass_filter.cpp.D73D00CB4E3C7C24.idx  bandpass_filter.h.9F13536B3C2E81AE.idx  current_statistical_model.cpp.D65262A3B979A704.idx  current_statistical_model.h.DA1E292DDAFDB89B.idx  ducmkf.cpp.9B0E4FB74C96B7BE.idx  ducmkf.h.4B63A53D897CD8E3.idx  imm_filter.cpp.5DC52D684F313989.idx  imm_filter.h.478F8943BFD68A36.idx  kalman_filter.cpp.1C2567DA7B8C57A0.idx  kalman_filter.h.9B5D702FA5232DF7.idx  logger.cpp.5C9BB9554F2145E1.idx  logger.h.E29DAF45CF61F01F.idx  main.cpp.696E2E61F0B72FFD.idx  performance_test.cpp.FD6E0FD0CD0C51AD.idx  plot_results.cpp.1C26EFB362FA15CD.idx  plot_results.h.DF0BDD3432F903BE.idx  sim.cpp.69F4945D11D5CBC7.idx  simple_loop_test.cpp.9E82FABB35A86E02.idx  simulation_data.h.BEC5A0CE5E21F1F9.idx  test_suite.cpp.8661BCC575D7A7C6.idx  types.h.58E08D41B3AF80A9.idx  wind_gust_handler.cpp.990036A4A764E004.idx  wind_gust_handler.h.8D37EE3A96694208.idx
include/: aimm_cs_ducmkf.h  bandpass_filter.h  current_statistical_model.h  ducmkf.h  imm_filter.h  kalman_filter.h  logger.h  types.h  wind_gust_handler.h
src/: aimm_cs_ducmkf.cpp  bandpass_filter.cpp  current_statistical_model.cpp  ducmkf.cpp  imm_filter.cpp  kalman_filter.cpp  logger.cpp  wind_gust_handler.cpp
test/: main.cpp  performance_test.cpp  plot_results.py  sim.cpp  simple_loop_test.cpp  test_suite.cpp
